log
Sun 08 Oct 2023 06:11:54 PM UTC: 
 tests:  0|5
total_score: 0/70
6a98bc6
Sun 08 Oct 2023 06:26:22 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:20: error: invalid initializer
   54 |   int sudo[9][9] = n->sudo;
      |                    ^
sudoku.c:54:7: error: unused variable ‘sudo’ [-Werror=unused-variable]
   54 |   int sudo[9][9] = n->sudo;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
9757ddc
Sun 08 Oct 2023 06:34:58 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:11: error: unused variable ‘k’ [-Werror=unused-variable]
   54 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
263a530
Sun 08 Oct 2023 06:35:56 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:17: error: unused variable ‘copiaN’ [-Werror=unused-variable]
   59 |           Node* copiaN = copy(n);
      |                 ^~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b2749f
Sun 08 Oct 2023 06:36:28 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c77d1e
